[gd_scene load_steps=7 format=3 uid="uid://v4n4s1q6aegb"]

[ext_resource type="Texture2D" uid="uid://ctaktq0m7778j" path="res://icon.svg" id="1_80nbo"]
[ext_resource type="Script" uid="uid://phl2nmy8mphy" path="res://game.gd" id="1_e2o6t"]

[sub_resource type="Curve2D" id="Curve2D_e2o6t"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 545, 357, 0, 0, 0, 0, 449, 344, 0, 0, 0, 0, 397, 353, 0, 0, 0, 0, 333, 340, 0, 0, 0, 0, 275, 358, 0, 0, 0, 0, 232, 343, 0, 0, 0, 0, 182, 355, 0, 0, 0, 0, 232, 348, 0, 0, 0, 0, 276, 344, 0, 0, 0, 0, 321, 352, 0, 0, 0, 0, 393, 338, 0, 0, 0, 0, 450, 352, 0, 0, 0, 0, 505, 343, 0, 0, 0, 0, 545, 357)
}
point_count = 14

[sub_resource type="CircleShape2D" id="CircleShape2D_e2o6t"]
radius = 80.14195

[sub_resource type="CircleShape2D" id="CircleShape2D_feb5d"]
radius = 73.82411

[sub_resource type="SystemFont" id="SystemFont_e2o6t"]
font_names = PackedStringArray("Ink Free")

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -179.0
offset_bottom = 128.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainerTransparent" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerTransparent"]
layout_mode = 2
text = "Transparent"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerTransparent"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainerBorder" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder"]
layout_mode = 2
text = "Borderless"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainerBorder2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder2"]
layout_mode = 2
text = "Always on Top"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder2"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainerBorder3" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder3"]
layout_mode = 2
text = "No Focus"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder3"]
layout_mode = 2

[node name="PathToGold" type="Path2D" parent="."]
curve = SubResource("Curve2D_e2o6t")

[node name="PathFollow2D" type="PathFollow2D" parent="PathToGold"]
position = Vector2(545, 357)
rotation = -3.0069947

[node name="Ship" type="Sprite2D" parent="PathToGold/PathFollow2D"]
position = Vector2(-15.772697, 10.208902)
rotation = 3.0069947
scale = Vector2(0.20312503, 0.20312503)
texture = ExtResource("1_80nbo")

[node name="Area2D" type="Area2D" parent="PathToGold/PathFollow2D/Ship"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathToGold/PathFollow2D/Ship/Area2D"]
shape = SubResource("CircleShape2D_e2o6t")

[node name="Island" type="Sprite2D" parent="."]
self_modulate = Color(0.29411766, 0.9411765, 0, 1)
position = Vector2(574, 296)
texture = ExtResource("1_80nbo")

[node name="Area2D" type="Area2D" parent="Island"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island/Area2D"]
shape = SubResource("CircleShape2D_feb5d")

[node name="Label" type="Label" parent="Island"]
offset_left = -7.0
offset_top = -91.0
offset_right = 52.0
offset_bottom = -68.0
theme_override_fonts/font = SubResource("SystemFont_e2o6t")
theme_override_font_sizes/font_size = 14
text = "0 Gold"
horizontal_alignment = 2

[node name="Gold" type="Sprite2D" parent="."]
modulate = Color(1, 0.7254902, 0, 1)
position = Vector2(177.5, 327.5)
scale = Vector2(0.5078125, 0.5078125)
texture = ExtResource("1_80nbo")

[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerTransparent/CheckButton" to="." method="_on_transparent_button_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder/CheckButton" to="." method="_on_border_button_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder2/CheckButton" to="." method="_on_always_on_top_button_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainerBorder3/CheckButton" to="." method="_on_no_focus_button_toggled"]
[connection signal="area_entered" from="Island/Area2D" to="." method="_on_island_area_entered"]
